# CS61A-GUI

./: .gitignore  LOCAL-README.md  README.md  launcher.py  package.json  pyproject.toml  setup.ps1  start.ps1  vercel.json
api/: course.js
backend/cs61a_gui/: __init__.py  app.py  catalog.py  content.py  importer.py  registry.py  runner.py  storage.py  translation.py
backend/tests/: conftest.py  test_catalog.py  test_content.py  test_importer.py  test_registry.py  test_runner.py  test_storage.py  test_translation.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: catalog.json
frontend/src/: App.tsx  api.ts  localApi.ts  localStore.ts  main.tsx  python.worker.ts  pythonBridge.ts  serverApi.ts  styles.css  types.ts
scripts/: build-release.ps1
