[project]
name = "cs61a-gui"
version = "0.1.0"
description = "A local visual workspace for CS61A OK assignments"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
]

[project.scripts]
cs61a-gui = "cs61a_gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/cs61a_gui"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

